# ingestaoMercadoBitcoin

./: .gitignore  Makefile  README.md  pyproject.toml  zappa_settings.json
.github/workflows/: feature_branch.yml
mercado_bitcoin/: apis.py  checkpoints.py  ingestors.py  lambda_function.py  main.py  writers.py
tests/: test_apis.py  test_ingestors.py  test_integration.py
