[tool.poetry]
name = "mercado_bitcoin_lambda"
version = "0.1.0"
description = ""
authors = ["Daniel Volponi"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
requests = "^2.28.1"
ratelimit = "^2.2.1"
backoff = "^2.1.2"
boto3 = "^1.24.70"
schedule = "^1.1.0"
pynamodb = "^5.2.1"

[tool.poetry.dev-dependencies]
zappa = "^0.55.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
